thDisclosure content fix (#283)
* Fix for thDisclosure dynamic content getting clipped

* Turn off transitions just before turning off max-height to make safari happy

* Fix ng-style formatting on template

* Fix disclosure tests

* Making the linter happy

--- a/themis_components/thDisclosure/index.scss
+++ b/themis_components/thDisclosure/index.scss
@@ -3,8 +3,11 @@ th-disclosure-content {
     width: 100%;
     display: block;
     overflow: hidden;
-    max-height: 0;
     transition: max-height .3s;
+
+    &.open {
+      transition: max-height 0;
+    }
   }
 }
 
